# OOP_lab3

./: LICENSE  README.md
lab3/: CMakeLists.txt  main.cpp
lab3/include/: Figure.hpp  diamond.hpp  hexagon.hpp  pentagon.hpp
lab3/src/: Figure.cpp  diamond.cpp  hexagon.cpp  pentagon.cpp
lab3/tests/: tests.cpp
